--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -4,4 +4,16 @@ Icon=skype_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/skype
 Comment=Skype Internet Telephony
+Comment[nb]=Skype IP-telefoni
+Comment[nn]=Skype Internett-telefoni
+Comment[pt]=Telefonia Internet Skype
+Comment[sv]=Skype Internettelefoni
+Comment[uk]=Інтернет-телефонія Skype
+Comment[x-test]=xxSkype Internet Telephonyxx
 Name=Skype
+Name[nb]=Skype
+Name[nn]=Skype
+Name[pt]=Skype
+Name[sv]=Skype
+Name[uk]=Skype
+Name[x-test]=xxSkypexx
