--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -4,5 +4,17 @@ Icon=groupwise_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/groupwise
 Comment=Novell GroupWise Messenger
+Comment[nb]=Novell GroupWise meldingsprogram
+Comment[nn]=Lynmeldingstenesta Novell GroupWise
+Comment[pt]=Novell GroupWise Messenger
+Comment[sv]=Novell GroupWise-meddelandeklient
+Comment[uk]=Програма обміну повідомленнями Novell GroupWise
+Comment[x-test]=xxNovell GroupWise Messengerxx
 Name=GroupWise
+Name[nb]=GroupWise
+Name[nn]=GroupWise
+Name[pt]=GroupWise
+Name[sv]=GroupWise
+Name[uk]=GroupWise
+Name[x-test]=xxGroupWisexx
 
