--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -4,5 +4,17 @@ Icon=sms_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/sms
 Comment=SMS Protocol
+Comment[nb]=SMS Protokoll
+Comment[nn]=SMS-protokoll
+Comment[pt]=Protocolo SMS
+Comment[sv]=SMS-protokoll
+Comment[uk]=Протокол SMS
+Comment[x-test]=xxSMS Protocolxx
 Name=SMS
+Name[nb]=SMS
+Name[nn]=SMS
+Name[pt]=SMS
+Name[sv]=SMS
+Name[uk]=SMS
+Name[x-test]=xxSMSxx
 
