--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -4,6 +4,7 @@ Icon=irc_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/irc
 Comment=Internet Relay Chat
+Comment[en_GB]=Internet Relay Chat
 Comment[nb]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
@@ -11,6 +12,7 @@ Comment[sv]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
 Name=IRC
+Name[en_GB]=IRC
 Name[nb]=IRC
 Name[nn]=IRC
 Name[pt]=IRC
