--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -4,6 +4,7 @@ Icon=jabber_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/xmpp
 Comment=Jabber Protocol
+Comment[en_GB]=Jabber Protocol
 Comment[nb]=Jabber-protokoll
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
@@ -11,6 +12,7 @@ Comment[sv]=Jabber-protokoll
 Comment[uk]=Протокол Jabber
 Comment[x-test]=xxJabber Protocolxx
 Name=Jabber
+Name[en_GB]=Jabber
 Name[nb]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
