--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -4,6 +4,7 @@ Icon=msn_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/msn
 Comment=MSN Messenger
+Comment[en_GB]=MSN Messenger
 Comment[nb]=MSN Messenger
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
@@ -11,6 +12,7 @@ Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
 Name=MSN Messenger
+Name[en_GB]=MSN Messenger
 Name[nb]=MSN Messenger
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
