--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -4,6 +4,7 @@ Icon=yahoo_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/yahoo
 Comment=Yahoo Protocol
+Comment[en_GB]=Yahoo Protocol
 Comment[nb]=Yahoo-protokoll
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
@@ -11,6 +12,7 @@ Comment[sv]=Yahoo-protokoll
 Comment[uk]=Протокол Yahoo
 Comment[x-test]=xxYahoo Protocolxx
 Name=Yahoo
+Name[en_GB]=Yahoo
 Name[nb]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
