--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -4,6 +4,7 @@ Icon=aim_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/aim
 Comment=AIM Protocol
+Comment[en_GB]=AIM Protocol
 Comment[nb]=AIM-protokoll
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
@@ -11,6 +12,7 @@ Comment[sv]=AIM-protokoll
 Comment[uk]=Протокол AIM
 Comment[x-test]=xxAIM Protocolxx
 Name=AIM
+Name[en_GB]=AIM
 Name[nb]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
