--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -4,6 +4,7 @@ Icon=icq_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/icq
 Comment=ICQ Protocol
+Comment[en_GB]=ICQ Protocol
 Comment[nb]=ICQ-protokoll
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
@@ -11,6 +12,7 @@ Comment[sv]=ICQ-protokoll
 Comment[uk]=Протокол ICQ
 Comment[x-test]=xxICQ Protocolxx
 Name=ICQ
+Name[en_GB]=ICQ
 Name[nb]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
