--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -4,6 +4,7 @@ Icon=sms_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/sms
 Comment=SMS Protocol
+Comment[en_GB]=SMS Protocol
 Comment[nb]=SMS Protokoll
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
@@ -11,6 +12,7 @@ Comment[sv]=SMS-protokoll
 Comment[uk]=Протокол SMS
 Comment[x-test]=xxSMS Protocolxx
 Name=SMS
+Name[en_GB]=SMS
 Name[nb]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
