--- a/akonadi/tests/etm_test_app/CMakeLists.txt
+++ b/akonadi/tests/etm_test_app/CMakeLists.txt
@@ -23,11 +23,13 @@ target_link_libraries(akonadi_etm_test_app
   akonadi-kde
   akonadi-kmime
   akonaditestfake
+  ${AKONADI_COMMON_LIBRARIES}
   ${KDE4_KDEUI_LIBS}
   ${KDE4_AKONADI_LIBS}
   ${KDE4_KMIME_LIBRARY}
   ${KDE4_KDECORE_LIBS}
   ${QT_QTCORE_LIBRARY}
   ${QT_QTDBUS_LIBRARY}
+  ${QT_QTNETWORK_LIBRARY}
   ${QT_QTTEST_LIBRARY}
 )
