--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -3,6 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=KABC/IMProtocol
 X-KDE-KAddressBook-CEWVersion=1
 Name=KAddressbook Instant Messaging Protocol
+Name[ca]=Protocol de missatgeria instantània del KAddressbook
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
