--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -4,6 +4,7 @@ Icon=gadu_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/gadu
 Comment=Gadu-Gadu Protocol
+Comment[ca]=Protocol Gadu-Gadu
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nn]=Gadu-Gadu-protokoll
@@ -12,6 +13,7 @@ Comment[sv]=Gadu-Gadu protokoll
 Comment[uk]=Протокол Gadu-Gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
 Name=Gadu-Gadu
+Name[ca]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
