--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -4,6 +4,7 @@ Icon=groupwise_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/groupwise
 Comment=Novell GroupWise Messenger
+Comment[ca]=Novell GroupWise Messenger
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
@@ -12,6 +13,7 @@ Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
 Name=GroupWise
+Name[ca]=GroupWise
 Name[en_GB]=GroupWise
 Name[nb]=GroupWise
 Name[nn]=GroupWise
