--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -4,6 +4,7 @@ Icon=meanwhile_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/meanwhile
 Comment=Meanwhile Protocol
+Comment[ca]=Protocol Meanwhile
 Comment[en_GB]=Meanwhile Protocol
 Comment[nb]=Meanwhile-protokoll
 Comment[nn]=Meanwhile-protokoll
@@ -12,6 +13,7 @@ Comment[sv]=Meanwhile-protokoll
 Comment[uk]=Протокол Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
 Name=Meanwhile
+Name[ca]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[nb]=Meanwhile
 Name[nn]=Meanwhile
