--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -4,6 +4,7 @@ Icon=skype_protocol
 X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/skype
 Comment=Skype Internet Telephony
+Comment[ca]=Telefonia d'Internet Skype
 Comment[en_GB]=Skype Internet Telephony
 Comment[nb]=Skype IP-telefoni
 Comment[nn]=Skype Internett-telefoni
@@ -12,6 +13,7 @@ Comment[sv]=Skype Internettelefoni
 Comment[uk]=Інтернет-телефонія Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
 Name=Skype
+Name[ca]=Skype
 Name[en_GB]=Skype
 Name[nb]=Skype
 Name[nn]=Skype
