SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1103875

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -28,6 +28,7 @@ Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
 Name[nl]=Contactpersoon-acties
+Name[nn]=Kontakthandlingar
 Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
@@ -62,6 +63,7 @@ Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
 Comment[nl]=De contactpersoon-actie configureren
+Comment[nn]=Set opp kontakthandlingar
 Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
