--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -84,7 +84,16 @@ endmacro(add_akonadi_isolated_test)
 
 
 # akonadi test fake library
-kde4_add_library(akonaditestfake STATIC fakesession.cpp fakemonitor.cpp fakeserver.cpp fakeserverdata.cpp public_etm.cpp akonadieventqueue.cpp modelspy.cpp)
+kde4_add_library(akonaditestfake STATIC
+  fakeakonadiservercommand.cpp
+  fakesession.cpp
+  fakemonitor.cpp
+  fakeserver.cpp
+  fakeserverdata.cpp
+  public_etm.cpp
+  akonadieventqueue.cpp
+  modelspy.cpp
+)
 
 # demo applications
 add_akonadi_demo(itemdumper.cpp)
