SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1105112

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -8,6 +8,7 @@ Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
+Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
 Name[x-test]=xxKAddressbook Instant Messaging Protocolxx
