--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=AIM Protocol
 Comment[nb]=AIM-protokoll
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
+Comment[pt_BR]=Protocolo do AIM
 Comment[sv]=AIM-protokoll
 Comment[uk]=Протокол AIM
 Comment[x-test]=xxAIM Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=AIM
 Name[nb]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
+Name[pt_BR]=AIM
 Name[sv]=AIM
 Name[uk]=AIM
 Name[x-test]=xxAIMxx
