--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Novell GroupWise Messenger
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
+Comment[pt_BR]=Mensageiro do GroupWise da Novell
 Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
@@ -18,6 +19,7 @@ Name[en_GB]=GroupWise
 Name[nb]=GroupWise
 Name[nn]=GroupWise
 Name[pt]=GroupWise
+Name[pt_BR]=GroupWise
 Name[sv]=GroupWise
 Name[uk]=GroupWise
 Name[x-test]=xxGroupWisexx
