--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=ICQ Protocol
 Comment[nb]=ICQ-protokoll
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
+Comment[pt_BR]=Protocolo do ICQ
 Comment[sv]=ICQ-protokoll
 Comment[uk]=Протокол ICQ
 Comment[x-test]=xxICQ Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=ICQ
 Name[nb]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
+Name[pt_BR]=ICQ
 Name[sv]=ICQ
 Name[uk]=ICQ
 Name[x-test]=xxICQxx
