--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Internet Relay Chat
 Comment[nb]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
+Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[sv]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
@@ -18,6 +19,7 @@ Name[en_GB]=IRC
 Name[nb]=IRC
 Name[nn]=IRC
 Name[pt]=IRC
+Name[pt_BR]=IRC
 Name[sv]=IRC
 Name[uk]=IRC
 Name[x-test]=xxIRCxx
