--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=MSN Messenger
 Comment[nb]=MSN Messenger
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
+Comment[pt_BR]=Mensageiro do MSN
 Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
@@ -18,6 +19,7 @@ Name[en_GB]=MSN Messenger
 Name[nb]=MSN Messenger
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
+Name[pt_BR]=MSN Messenger
 Name[sv]=MSN Messenger
 Name[uk]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
