--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Skype Internet Telephony
 Comment[nb]=Skype IP-telefoni
 Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
+Comment[pt_BR]=Telefonia Internet Skype
 Comment[sv]=Skype Internettelefoni
 Comment[uk]=Інтернет-телефонія Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
@@ -18,6 +19,7 @@ Name[en_GB]=Skype
 Name[nb]=Skype
 Name[nn]=Skype
 Name[pt]=Skype
+Name[pt_BR]=Skype
 Name[sv]=Skype
 Name[uk]=Skype
 Name[x-test]=xxSkypexx
