--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Yahoo Protocol
 Comment[nb]=Yahoo-protokoll
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
+Comment[pt_BR]=Protocolo do Yahoo
 Comment[sv]=Yahoo-protokoll
 Comment[uk]=Протокол Yahoo
 Comment[x-test]=xxYahoo Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=Yahoo
 Name[nb]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
+Name[pt_BR]=Yahoo
 Name[sv]=Yahoo
 Name[uk]=Yahoo
 Name[x-test]=xxYahooxx
