--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Gadu-Gadu Protocol
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
+Comment[pt_BR]=Protocolo do Gadu-Gadu
 Comment[sv]=Gadu-Gadu protokoll
 Comment[uk]=Протокол Gadu-Gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
+Name[pt_BR]=Gadu-Gadu
 Name[sv]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
