--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Jabber Protocol
 Comment[nb]=Jabber-protokoll
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
+Comment[pt_BR]=Protocolo do Jabber
 Comment[sv]=Jabber-protokoll
 Comment[uk]=Протокол Jabber
 Comment[x-test]=xxJabber Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=Jabber
 Name[nb]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
+Name[pt_BR]=Jabber
 Name[sv]=Jabber
 Name[uk]=Jabber
 Name[x-test]=xxJabberxx
