--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=Meanwhile Protocol
 Comment[nb]=Meanwhile-protokoll
 Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
+Comment[pt_BR]=Protocolo do Meanwhile
 Comment[sv]=Meanwhile-protokoll
 Comment[uk]=Протокол Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=Meanwhile
 Name[nb]=Meanwhile
 Name[nn]=Meanwhile
 Name[pt]=Meanwhile
+Name[pt_BR]=Meanwhile
 Name[sv]=Meanwhile
 Name[uk]=Meanwhile
 Name[x-test]=xxMeanwhilexx
