--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -9,6 +9,7 @@ Comment[en_GB]=SMS Protocol
 Comment[nb]=SMS Protokoll
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
+Comment[pt_BR]=Protocolo SMS
 Comment[sv]=SMS-protokoll
 Comment[uk]=Протокол SMS
 Comment[x-test]=xxSMS Protocolxx
@@ -18,6 +19,7 @@ Name[en_GB]=SMS
 Name[nb]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
+Name[pt_BR]=SMS
 Name[sv]=SMS
 Name[uk]=SMS
 Name[x-test]=xxSMSxx
