--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,14 @@ set(kalarm_calendar_LIB_SRCS
 	karecurrence.cpp
 	alarmtext.cpp
 	identities.cpp
-	kaeventdata.cpp
+	kaevent.cpp
 	../lib/datetime.cpp
 )
 
 kde4_add_library(kalarm_calendar SHARED ${kalarm_calendar_LIB_SRCS})
 
-target_link_libraries(kalarm_calendar ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS})
-target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS})
+target_link_libraries(kalarm_calendar ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
 
 set_target_properties(kalarm_calendar PROPERTIES 
    VERSION ${GENERIC_LIB_VERSION} 
