SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1106009

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -6,6 +6,7 @@ Name=KAddressbook Instant Messaging Protocol
 Name[ca]=Protocol de missatgeria instantània del KAddressbook
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[nb]=KAdressbook lynmeldingsprotokoll
+Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
