--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -7,6 +7,7 @@ Comment=AIM Protocol
 Comment[ca]=Protocol AIM
 Comment[en_GB]=AIM Protocol
 Comment[nb]=AIM-protokoll
+Comment[nds]=AIM-Protokoll
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
@@ -17,6 +18,7 @@ Name=AIM
 Name[ca]=AIM
 Name[en_GB]=AIM
 Name[nb]=AIM
+Name[nds]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
