--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Gadu-Gadu Protocol
 Comment[ca]=Protocol Gadu-Gadu
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[nb]=Gadu-Gadu-protokoll
+Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
@@ -17,6 +18,7 @@ Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
+Name[nds]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
