--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -7,6 +7,7 @@ Comment=ICQ Protocol
 Comment[ca]=Protocol ICQ
 Comment[en_GB]=ICQ Protocol
 Comment[nb]=ICQ-protokoll
+Comment[nds]=ICQ-Protokoll
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
@@ -17,6 +18,7 @@ Name=ICQ
 Name[ca]=ICQ
 Name[en_GB]=ICQ
 Name[nb]=ICQ
+Name[nds]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
