--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Jabber Protocol
 Comment[ca]=Protocol Jabber
 Comment[en_GB]=Jabber Protocol
 Comment[nb]=Jabber-protokoll
+Comment[nds]=Jabber-Protokoll
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
@@ -17,6 +18,7 @@ Name=Jabber
 Name[ca]=Jabber
 Name[en_GB]=Jabber
 Name[nb]=Jabber
+Name[nds]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
