--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
 Comment[en_GB]=Skype Internet Telephony
 Comment[nb]=Skype IP-telefoni
+Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
@@ -17,6 +18,7 @@ Name=Skype
 Name[ca]=Skype
 Name[en_GB]=Skype
 Name[nb]=Skype
+Name[nds]=Skype
 Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
