--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -7,6 +7,7 @@ Comment=SMS Protocol
 Comment[ca]=Protocol SMS
 Comment[en_GB]=SMS Protocol
 Comment[nb]=SMS Protokoll
+Comment[nds]=SMS-Protokoll
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
@@ -17,6 +18,7 @@ Name=SMS
 Name[ca]=SMS
 Name[en_GB]=SMS
 Name[nb]=SMS
+Name[nds]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
