--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Yahoo Protocol
 Comment[ca]=Protocol Yahoo
 Comment[en_GB]=Yahoo Protocol
 Comment[nb]=Yahoo-protokoll
+Comment[nds]=Yahoo-Protokoll
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
@@ -17,6 +18,7 @@ Name=Yahoo
 Name[ca]=Yahoo
 Name[en_GB]=Yahoo
 Name[nb]=Yahoo
+Name[nds]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
