--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Novell GroupWise Messenger
 Comment[ca]=Novell GroupWise Messenger
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[nb]=Novell GroupWise meldingsprogram
+Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
@@ -17,6 +18,7 @@ Name=GroupWise
 Name[ca]=GroupWise
 Name[en_GB]=GroupWise
 Name[nb]=GroupWise
+Name[nds]=GroupWise
 Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
