--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Internet Relay Chat
 Comment[ca]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[nb]=Internet Relay Chat
+Comment[nds]=Klöönsnack (Internet Relay Chat)
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
@@ -17,6 +18,7 @@ Name=IRC
 Name[ca]=IRC
 Name[en_GB]=IRC
 Name[nb]=IRC
+Name[nds]=IRC
 Name[nn]=IRC
 Name[pt]=IRC
 Name[pt_BR]=IRC
