--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Meanwhile Protocol
 Comment[ca]=Protocol Meanwhile
 Comment[en_GB]=Meanwhile Protocol
 Comment[nb]=Meanwhile-protokoll
+Comment[nds]=Meanwhile-Protokoll
 Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
@@ -17,6 +18,7 @@ Name=Meanwhile
 Name[ca]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[nb]=Meanwhile
+Name[nds]=Meanwhile
 Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
