--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -7,6 +7,7 @@ Comment=MSN Messenger
 Comment[ca]=MSN Messenger
 Comment[en_GB]=MSN Messenger
 Comment[nb]=MSN Messenger
+Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=Mensageiro do MSN
@@ -17,6 +18,7 @@ Name=MSN Messenger
 Name[ca]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[nb]=MSN Messenger
+Name[nds]=MSN-Kortnarichtenmaker
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
