--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -84,7 +84,11 @@ endmacro(add_akonadi_isolated_test)
 
 
 # akonadi test fake library
+set(akonaditestfake_xml ${AKONADI_DBUS_INTERFACES_DIR}/org.freedesktop.Akonadi.NotificationManager.xml)
+set_source_files_properties(${akonaditestfake_xml} PROPERTIES INCLUDE "notificationmessage_p.h")
+qt4_add_dbus_interface( akonaditestfake_srcs ${akonaditestfake_xml} notificationmanagerinterface )
 kde4_add_library(akonaditestfake STATIC
+  ${akonaditestfake_srcs}
   fakeakonadiservercommand.cpp
   fakesession.cpp
   fakemonitor.cpp
