Moved ContactsTreeModel and ContactsFilterModel from kdepim/libkdepim to kdepimlibs/akonadi/contact
svn path=/trunk/KDE/kdepimlibs/; revision=1106611

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -70,6 +70,8 @@ set(akonadicontact_LIB_SRC
   contactmetadata.cpp
   contactmetadataattribute.cpp
   contactsearchjob.cpp
+  contactsfilterproxymodel.cpp
+  contactstreemodel.cpp
   contactviewer.cpp
   contactviewerdialog.cpp
   customfields.cpp
@@ -124,6 +126,8 @@ install( FILES
   contactgroupviewer.h
   contactgroupviewerdialog.h
   contactsearchjob.h
+  contactsfilterproxymodel.h
+  contactstreemodel.h
   contactviewer.h
   contactviewerdialog.h
   recentcontactscollectionrequestjob.h
