SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1107214

--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -33,10 +33,10 @@ Name[ru]=Управление источниками данных
 Name[se]=KResources-gieđahalli
 Name[sk]=KResources manažér
 Name[sl]=Upravnik KResources
-Name[sr]=Менаџер к‑ресурса
-Name[sr@ijekavian]=Менаџер к‑ресурса
-Name[sr@ijekavianlatin]=Menadžer k‑resursa
-Name[sr@latin]=Menadžer k‑resursa
+Name[sr]=Менаџер К‑ресурса
+Name[sr@ijekavian]=Менаџер К‑ресурса
+Name[sr@ijekavianlatin]=Menadžer K‑resursa
+Name[sr@latin]=Menadžer K‑resursa
 Name[sv]=Resurshantering
 Name[th]=ตัวจัดการทรัพยากร
 Name[tr]=KResources Yöneticisi
@@ -80,10 +80,10 @@ Comment[ru]=Управление источниками данных
 Comment[se]=KResources-gieđahalli
 Comment[sk]=KResources manažér
 Comment[sl]=Upravnik KResources
-Comment[sr]=Менаџер к‑ресурса
-Comment[sr@ijekavian]=Менаџер к‑ресурса
-Comment[sr@ijekavianlatin]=Menadžer k‑resursa
-Comment[sr@latin]=Menadžer k‑resursa
+Comment[sr]=Менаџер К‑ресурса
+Comment[sr@ijekavian]=Менаџер К‑ресурса
+Comment[sr@ijekavianlatin]=Menadžer K‑resursa
+Comment[sr@latin]=Menadžer K‑resursa
 Comment[sv]=Resurshantering
 Comment[th]=ตัวจัดการทรัพยากร K
 Comment[tr]=KResources Yöneticisi
