SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1107262

--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -33,10 +33,10 @@ Name[ru]=Модуль KResources
 Name[se]=KResources-lassemodula
 Name[sk]=KResources zásuvný modul
 Name[sl]=Vstavek KResources
-Name[sr]=Прикључак радног оквира к‑ресурса
-Name[sr@ijekavian]=Прикључак радног оквира к‑ресурса
-Name[sr@ijekavianlatin]=Priključak radnog okvira k‑resursa
-Name[sr@latin]=Priključak radnog okvira k‑resursa
+Name[sr]=Прикључак радног оквира К‑ресурса
+Name[sr@ijekavian]=Прикључак радног оквира К‑ресурса
+Name[sr@ijekavianlatin]=Priključak radnog okvira K‑resursa
+Name[sr@latin]=Priključak radnog okvira K‑resursa
 Name[sv]=Insticksprogram för resurser
 Name[th]=ส่วนเสริม 'จัดการทรัพยากร-K'
 Name[tr]=KResources Eklentisi
@@ -79,10 +79,10 @@ Comment[ro]=Modul de arhitectură KResurse
 Comment[ru]=Модуль инфраструктуры KResource
 Comment[sk]=KResources Framework zásuvný modul
 Comment[sl]=Vstavek za ogrodje KResources
-Comment[sr]=Прикључак радног оквира к‑ресурса
-Comment[sr@ijekavian]=Прикључак радног оквира к‑ресурса
-Comment[sr@ijekavianlatin]=Priključak radnog okvira k‑resursa
-Comment[sr@latin]=Priključak radnog okvira k‑resursa
+Comment[sr]=Прикључак радног оквира К‑ресурса
+Comment[sr@ijekavian]=Прикључак радног оквира К‑ресурса
+Comment[sr@ijekavianlatin]=Priključak radnog okvira K‑resursa
+Comment[sr@latin]=Priključak radnog okvira K‑resursa
 Comment[sv]=Insticksprogram för resursramverk
 Comment[th]=ส่วนเสริมเฟรมเวิร์ก 'จัดการทรัพยากร-K'
 Comment[tr]=KResources Çalışma Alanı Eklentisi
