Fix cmake warning about : Warning: Source file "/home/laurent/kde/kde4/kdepimlibs/kcal/versit/vcc.c" is listed multiple times for target "kcal". Warning: Source file "/home/laurent/kde/kde4/kdepimlibs/kcal/versit/vobject.c" is listed multiple times for target "kcal".
svn path=/trunk/KDE/kdepimlibs/; revision=1107284

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -76,7 +76,7 @@ set(kcal_LIB_SRCS ${libversit_SRCS}
 )
 
 if (NOT KDEPIM_NO_KRESOURCES)
-  set(kcal_LIB_SRCS ${libversit_SRCS} ${kcal_LIB_SRCS}
+  set(kcal_LIB_SRCS ${kcal_LIB_SRCS}
     calhelper.cpp
     resourcecalendar.cpp
     resourcelocal.cpp
