--- a/kldap/CMakeLists.txt
+++ b/kldap/CMakeLists.txt
@@ -54,8 +54,10 @@ set(kldap_LIB_SRCS
    ldapobject.cpp
    ldapconnection.cpp
    ldapoperation.cpp
+   ldapclient.cpp
    ldapcontrol.cpp
    ldapsearch.cpp
+   ldapsearchdialog.cpp
    ldapconfigwidget.cpp
    ldapdn.cpp
    ldapmodelnode_p.cpp
@@ -67,17 +69,38 @@ set(kldap_LIB_SRCS
 
 kde4_add_library(kldap SHARED ${kldap_LIB_SRCS})
 
-include_directories( ${kldap_EXTRA_INCLUDES} )
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${Boost_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/kabc
+    ${kldap_EXTRA_INCLUDES} 
+)
 
-target_link_libraries(kldap ${KDE4_KIO_LIBS} ${KDE4_KDECORE_LIBS} ${kldap_EXTRA_LIBS} )
+target_link_libraries(kldap ${KDE4_KIO_LIBS} ${KDE4_KUTILS_LIBS} ${KDE4_KDECORE_LIBS} ${kldap_EXTRA_LIBS} kabc )
 
 set_target_properties(kldap PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION})
 install(TARGETS kldap EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
 
+########### next target ###############
+
+set( kcm_ldap_SRCS
+     addhostdialog.cpp
+     kcmldap.cpp
+)
+
+kde4_add_plugin(kcm_ldap ${kcm_ldap_SRCS})
+
+target_link_libraries(kcm_ldap ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} kldap)
+
+install(TARGETS kcm_ldap DESTINATION ${PLUGIN_INSTALL_DIR})
+
 ########### install files ###############
 
 install( FILES ber.h kldap_export.h ldapdefs.h ldif.h ldapurl.h ldapserver.h ldapobject.h
-  ldapconnection.h ldapoperation.h
-  ldapconfigwidget.h ldapcontrol.h ldapsearch.h
+  ldapconnection.h ldapoperation.h ldapclient.h
+  ldapconfigwidget.h ldapcontrol.h ldapsearch.h ldapsearchdialog.h
   ldapdn.h ldapmodel.h ldapstructureproxymodel.h ldapattributeproxymodel.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/kldap COMPONENT Devel)
+
+install(FILES kcmldap.desktop DESTINATION ${SERVICES_INSTALL_DIR})
