--- a/kldap/tests/CMakeLists.txt
+++ b/kldap/tests/CMakeLists.txt
@@ -22,4 +22,4 @@ set(testldapclient_SRCS testldapclient.cpp )
 
 kde4_add_executable(testldapclient TEST ${testldapclient_SRCS})
 
-target_link_libraries(testldapclient kdepim ${KDE4_KDEUI_LIBS} kldap)
+target_link_libraries(testldapclient ${KDE4_KDEUI_LIBS} kldap)
