SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1107604

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -11,6 +11,7 @@ Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[sv]=Addressbokens direktmeddelandeprotokoll
+Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
 Name[x-test]=xxKAddressbook Instant Messaging Protocolxx
 [PropertyDef::X-KDE-InstantMessagingKABCField]
