--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
 Comment[sv]=AIM-protokoll
+Comment[th]=โพรโทคอล AIM
 Comment[uk]=Протокол AIM
 Comment[x-test]=xxAIM Protocolxx
 Name=AIM
@@ -23,6 +24,7 @@ Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
 Name[sv]=AIM
+Name[th]=AIM
 Name[uk]=AIM
 Name[x-test]=xxAIMxx
 
