--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
 Comment[sv]=Gadu-Gadu protokoll
+Comment[th]=โพรโทคอล Gadu-Gadu
 Comment[uk]=Протокол Gadu-Gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
 Name=Gadu-Gadu
@@ -23,6 +24,7 @@ Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
 Name[sv]=Gadu-Gadu
+Name[th]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
 
