--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[sv]=ICQ-protokoll
+Comment[th]=โพรโทคอล ICQ
 Comment[uk]=Протокол ICQ
 Comment[x-test]=xxICQ Protocolxx
 Name=ICQ
@@ -23,6 +24,7 @@ Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
 Name[sv]=ICQ
+Name[th]=ICQ
 Name[uk]=ICQ
 Name[x-test]=xxICQxx
 
