--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[sv]=Jabber-protokoll
+Comment[th]=โพรโทคอล Jabber
 Comment[uk]=Протокол Jabber
 Comment[x-test]=xxJabber Protocolxx
 Name=Jabber
@@ -23,6 +24,7 @@ Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
 Name[sv]=Jabber
+Name[th]=Jabber
 Name[uk]=Jabber
 Name[x-test]=xxJabberxx
 
