--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
 Comment[sv]=Meanwhile-protokoll
+Comment[th]=โพรโทคอล Meanwhile
 Comment[uk]=Протокол Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
 Name=Meanwhile
@@ -23,6 +24,7 @@ Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
 Name[sv]=Meanwhile
+Name[th]=Meanwhile
 Name[uk]=Meanwhile
 Name[x-test]=xxMeanwhilexx
 
