--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -12,6 +12,7 @@ Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
 Comment[sv]=Yahoo-protokoll
+Comment[th]=โพรโทคอล Yahoo
 Comment[uk]=Протокол Yahoo
 Comment[x-test]=xxYahoo Protocolxx
 Name=Yahoo
@@ -23,6 +24,7 @@ Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
 Name[sv]=Yahoo
+Name[th]=Yahoo
 Name[uk]=Yahoo
 Name[x-test]=xxYahooxx
 
