Defer execution of KJob but not Akonadi::Job based jobs that require the Akonadi server to be operational until that's the case.
svn path=/trunk/KDE/kdepimlibs/; revision=1108274

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -114,6 +114,7 @@ set( akonadikde_LIB_SRC
   itemview.cpp
   job.cpp
   kdescendantsproxymodel.cpp
+  kjobprivatebase.cpp
   krecursivefilterproxymodel.cpp
   linkjob.cpp
   mimetypechecker.cpp
