SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1108505

--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -10,7 +10,7 @@ Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
-Comment[pt_BR]=Mensageiro do MSN
+Comment[pt_BR]=MSN Messenger
 Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
